fix: updated login page

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -17,13 +17,15 @@
           <ion-label position="floating">Username/SR Code</ion-label>
           <ion-input type="email"></ion-input>
         </ion-item>
+        <br>
         <ion-item>
           <ion-label position="floating">Password</ion-label>
           <ion-input type="password"></ion-input>
         </ion-item>
-        <ion-button color="dark" size = "full">Login</ion-button>
-        <ion-button color="medium" fill="clear" size="full">Forgot Username or Password</ion-button>
-        <ion-button routerLink="./register" color="medium" size = "full" fill="clear" href="register">Register</ion-button>
+        <br>
+        <ion-button expand="block" size = "full">Login</ion-button>
+        <ion-button fill="clear" size="full">Forgot Username or Password</ion-button>
+        <ion-button routerLink="./register" size = "full" href="register">Register</ion-button>
       </ion-card-content>
     </ion-card>
    </div>
