--- a/src/app/login/register/register.page.html
+++ b/src/app/login/register/register.page.html
@@ -16,11 +16,13 @@
           <ion-label position="floating">Username/SR Code</ion-label>
           <ion-input type="email"></ion-input>
         </ion-item>
+        <br>
         <ion-item>
           <ion-label position="floating">Password</ion-label>
           <ion-input type="password"></ion-input>
         </ion-item>
-        <ion-button color="dark" size = "full">Sign Up</ion-button>
+        <br>
+        <ion-button size = "full">Sign Up</ion-button>
       </ion-card-content>
     </ion-card>
    </div>
