--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,21 +1,21 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="classes">
+    <ion-tab-button tab="classes" *ngIf="!isStudent">
       <ion-icon name="qr-code-outline"></ion-icon>
       <ion-label>ATTENDANCE</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="book"></ion-icon>
-      <ion-label>SUBJECTS</ion-label>
+    <ion-tab-button tab="scan" *ngIf="isStudent">
+      <ion-icon name="camera-outline"></ion-icon>
+      <ion-label>SCAN</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="profile">
       <ion-icon name="person"></ion-icon>
       <ion-label>PROFILE</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tab3">
+    <ion-tab-button (click) = "logout()">
       <ion-icon name="exit"></ion-icon>
       <ion-label>LOGOUT</ion-label>
     </ion-tab-button>
